--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -287,7 +287,7 @@ if(location.host.indexOf('.local') > -1){
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone about">
                   <h3>About</h3>
                   <p>
-                    <strong>good</strong>moves is the premier careers hub for the civil society, charity and voluntary sector &ndash; run by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a>.
+                    <strong>Goodmoves</strong> is the premier careers hub for the civil society, charity and voluntary sector &ndash; run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>.
                   </p>
                 </div>
               </div>
