--- a/db/configurations/scvo/layouts/default.hbs
+++ b/db/configurations/scvo/layouts/default.hbs
@@ -167,11 +167,11 @@
                   <h3>Contact</h3>
                   <ul class="fa-ul">
                     <li>
-                      <span class="fa-li"><span class="fas fa-envelope-square"></span></span>
+                      <span class="fa-li"><span class="fas fa-envelope"></span></span>
                       <a href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a>
                     </li>
                     <li>
-                      <span class="fa-li"><span class="fas fa-phone-square"></span></span>
+                      <span class="fa-li"><span class="fas fa-phone"></span></span>
                       <a href="tel:+441314748000">0131 474 8000</a>
                     </li>
                   </ul>
@@ -180,7 +180,7 @@
                   </p>
                   <ul class="fa-ul">
                     <li>
-                      <span class="fa-li"><span class="fas fa-phone-square"></span></span>
+                      <span class="fa-li"><span class="fas fa-phone"></span></span>
                       <a href="tel:+448001690022">0800 169 0022</a>
                     </li>
                   </ul>
@@ -192,11 +192,11 @@
                   <h3>Social</h3>
                   <ul class="fa-ul">
                     <li>
-                      <span class="fa-li"><span class="fab fa-twitter-square"></span></span>
+                      <span class="fa-li"><span class="fab fa-twitter"></span></span>
                       <a href="https://twitter.com/scvotweet">Twitter</a>
                     </li>
                     <li>
-                      <span class="fa-li"><span class="fab fa-facebook-square"></span></span>
+                      <span class="fa-li"><span class="fab fa-facebook"></span></span>
                       <a href="https://www.facebook.com/SCVO1939">Facebook</a>
                     </li>
                     <li>
