--- a/db/configurations/digitalparticipation/layouts/default.hbs
+++ b/db/configurations/digitalparticipation/layouts/default.hbs
@@ -133,7 +133,7 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
                 <h3>About</h3>
                 <p>
-                  <strong>Scotland's Digital Participation Charter</strong> is run by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
+                  <strong>Scotland's Digital Participation Charter</strong> is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
                 </p>
               </div>
             </div>
