--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -851,6 +851,7 @@ input:focus:-ms-input-placeholder {
   margin-left: -$unit/2;
   img {
     max-height: $unit*3;
+    margin-top: $unit/2;
   }
 }
 
@@ -3652,7 +3653,7 @@ footer {
   .footer-copyright {
     p {
       font-size: 0.9rem;
-      margin: 0.7rem 0 0;
+      margin: $unit*.7 0 $unit/2;
     }
   }
 }
