--- a/assets/css/scotlandforeurope-styles.scss
+++ b/assets/css/scotlandforeurope-styles.scss
@@ -449,16 +449,16 @@ p.quote {
   li {
     display: inline-block;
     padding: 0 !important;
-    height: $unit*2;
-    width: $unit*2;
+    height: $unit*2.5;
+    width: $unit*2.5;
     border-radius: 50%;
     margin: 0 $unit/5;
     vertical-align: bottom;
     a {
       font-size: 1.3rem;
-      line-height: $unit*2;
-      height: $unit*2;
-      width: $unit*2;
+      line-height: $unit*2.5;
+      height: $unit*2.5;
+      width: $unit*2.5;
       color: $mdc-theme-secondary;
       padding: 0;
       margin: 0;
@@ -550,6 +550,7 @@ footer {
     position: relative;
   }
   .footer-main {
+    padding-bottom: $unit/2;
     border-top: $unit solid $mdc-theme-primary;
     // background-color: $mdc-theme-secondary;
     // background-image: linear-gradient(
