--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -777,6 +777,7 @@ main {
     margin: 0;
   }
   .signatory-logo-background {
+    padding-left: $unit*2;
     p {
       padding: 1rem 1rem 0.25rem;
       background: white;
@@ -1627,12 +1628,17 @@ footer {
   .pagination-distance-4 {
     display: none !important;
   }
-  main .signatories {
-    .signatory:nth-child(2n+1):nth-last-child(-n+2) {
-      border-bottom: none !important;
+  main {
+    .signatory-logo-background {
+      padding-left: 0;
     }
-    .signatory:nth-child(2n + 2) {
-      border-left: none;
+    .signatories {
+      .signatory:nth-child(2n+1):nth-last-child(-n+2) {
+        border-bottom: none !important;
+      }
+      .signatory:nth-child(2n + 2) {
+        border-left: none;
+      }
     }
   }
 }
