--- a/assets/css/humanrightsdeclaration-styles.scss
+++ b/assets/css/humanrightsdeclaration-styles.scss
@@ -343,6 +343,7 @@ p.quote {
     }
   }
   .signatory-logo-background {
+    padding-left: $unit*2;
     p {
       padding: 1rem 1rem 0.25rem;
       background: white;
@@ -697,6 +698,9 @@ footer {
 }
 
 @media screen and (max-width: 479px) {
+  main .signatory-logo-background {
+    padding-left: 0;
+  }
   footer .logo.scvo {
     position: relative;
     bottom: 0;
