Changed footer colours back to original Material Blue Grey 800

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -17,9 +17,9 @@ $brand-skills:                      #6beda0;
 
 $toolbar-shadow-reverse: 0px -3px 5px -1px rgba(0, 0, 0, 0.2), 0px -5px 8px 0px rgba(0, 0, 0, 0.14), 0px -1px 14px 0px rgba(0, 0, 0, 0.12);
 
-$mdc-theme-footer: #424242;
-$mdc-theme-footer-light: #565656;
-$mdc-theme-footer-dark: #292929;
+$mdc-theme-footer: #37474F;
+$mdc-theme-footer-light: #455A64;
+$mdc-theme-footer-dark: #263238;
 
 // Base variables
 
