--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -8,9 +8,9 @@ $mdc-theme-secondary: #424242;
 $mdc-theme-secondary-light: #f5f5f5;
 $mdc-theme-secondary-dark: darken($mdc-theme-secondary, 10%);
 
-$mdc-theme-footer: #424242;
-$mdc-theme-footer-light: #565656;
-$mdc-theme-footer-dark: #292929;
+$mdc-theme-footer: #37474F;
+$mdc-theme-footer-light: #455A64;
+$mdc-theme-footer-dark: #263238;
 
 $mdc-theme-error: #a93f34;
 
