--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -177,9 +177,9 @@ secondary-light: #FFA000,
 secondary-dark: #FF6F00
 ),
 footer: (
-primary: #424242,
-primary-light: #565656,
-primary-dark: #292929
+primary: #37474F,
+primary-light: #455A64,
+primary-dark: #263238
 )
 // footer: (
 // primary: #371448,
