--- a/db/configurations/scvo/templates/pages/page-policy.hbs
+++ b/db/configurations/scvo/templates/pages/page-policy.hbs
@@ -117,7 +117,7 @@
               </p>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              <span class="fal fa-fw fa-chart-line fa-5x"> </span>
+              <span class="fal fa-fw fa-home-heart fa-5x"> </span>
               <p>
                 <strong>937 new charities in 2017</strong>
               </p>
