--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3048,6 +3048,7 @@ body.post.author {
       content: " ";
       padding: 0;
       margin: 0;
+      display: none;
     }
   }
   .mdc-button {
@@ -3496,6 +3497,7 @@ p:last-child {
     content: " ";
     margin: 0;
     top: 0;
+    display: none;
   }
 }
 
