--- a/db/configurations/digitalparticipation/layouts/default.hbs
+++ b/db/configurations/digitalparticipation/layouts/default.hbs
@@ -83,100 +83,89 @@
             <nav class="mdc-temporary-drawer__content mdc-list-group">
               <div id="icon-with-text-demo" class="mdc-list" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.menu-label'" [menuactiveclass]="'active'">
                 {{#each context.menus.main}}
-                <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}"
-                data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
-                <span class="menu-label">{{{label}}}</span>
-              </a>
-              {{/each}}
-            </div>
+                <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-tab--active{{/if}}" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
+                  <span class="menu-label">{{{label}}}</span>
+                </a>
+                {{/each}}
+              </div>
+            </nav>
           </nav>
-        </nav>
-      </aside>
+        </aside>
 
-      <div class="container-fluid">
-        <!--{section:body}-->
-      </div>
-    </main>
-
-    <footer>
-      <div class="footer-main">
         <div class="container-fluid">
-          <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-                <h3>Contact</h3>
-                <ul class="fa-ul">
-                  <li>
-                    <span class="fa-li"><span class="fas fa-envelope"></span></span>
-                    <a href="mailto:digital@scvo.org.uk">digital@scvo.org.uk</a>
-                  </li>
-                  <li>
-                    <span class="fa-li"><span class="fab fa-twitter"></span></span>
-                    <a href="https://twitter.com/digiscot">Twitter</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-                <h3>Help</h3>
-                <ul class="mdc-list">
-                  <li class="mdc-list-item">
-                    <a href="/accessibility">Accessibility</a>
-                  </li>
-                  <li class="mdc-list-item">
-                    <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
-                  </li>
-                  <li class="mdc-list-item">
-                    <a href="/terms-and-conditions">Terms &amp; conditions</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-                <h3>About</h3>
-                <p>
-                  <strong>Scotland's Digital Participation Charter</strong> is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
-                </p>
+          <!--{section:body}-->
+        </div>
+      </main>
+
+      <footer>
+        <div class="footer-main">
+          <div class="container-fluid">
+            <div class="mdc-layout-grid">
+              <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                  <h3>Contact</h3>
+                  <ul class="fa-ul">
+                    <li>
+                      <span class="fa-li"><span class="fas fa-envelope"></span></span>
+                      <a href="mailto:digital@scvo.org.uk">digital@scvo.org.uk</a>
+                    </li>
+                    <li>
+                      <span class="fa-li"><span class="fab fa-twitter"></span></span>
+                      <a href="https://twitter.com/digiscot">Twitter</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                  <h3>Help</h3>
+                  <ul class="mdc-list">
+                    <li class="mdc-list-item">
+                      <a href="/accessibility">Accessibility</a>
+                    </li>
+                    <li class="mdc-list-item">
+                      <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
+                    </li>
+                    <li class="mdc-list-item">
+                      <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+                  <h3>About</h3>
+                  <p>
+                    <strong>Scotland's Digital Participation Charter</strong> is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer-copyright">
-        <div class="container-fluid">
-          <div class="mdc-layout-grid">
-            <div class="mdc-layout-grid__inner">
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-8-desktop">
-                <p>
-                  &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
-                </p>
-              </div>
-              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-                <a href="http://gov.scot/Topics/Economy/digital">
-                  <img src="/assets/images/digital-scotland-logo.png" alt="Digital Scotland" class="logo digital-scotland" />
-                </a>
-                <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
-                  <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
-                </a>
+        <div class="footer-copyright">
+          <div class="container-fluid">
+            <div class="mdc-layout-grid">
+              <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-8-desktop">
+                  <p>
+                    &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                  </p>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+                  <a href="http://gov.scot/Topics/Economy/digital">
+                    <img src="/assets/images/digital-scotland-logo.png" alt="Digital Scotland" class="logo digital-scotland" />
+                  </a>
+                  <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
+                    <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
-  </div>
-</scvo-site>
-<script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-<script type="text/javascript" id="cookieinfo"
-src="/assets/js/cookieinfo.min.js"
-data-bg="#02162E"
-data-fg="#FFFFFF"
-data-link="#FFFFFF"
-data-divlink="#FFFFFF"
-data-divlinkbg="#022347"
-data-moreinfo="/privacy-cookies-policy"
-data-cookie="CookieInfoScript"
-data-text-align="left">
-</script>
-<script type="text/javascript" src="/assets/js/digitalparticipation/root.js"></script>
-<!--{section:foot}-->
+      </footer>
+    </div>
+  </scvo-site>
+  <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#02162E" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-cookies-policy" data-cookie="CookieInfoScript" data-text-align="left"></script>
+  <script type="text/javascript" src="/assets/js/digitalparticipation/root.js"></script>
+  <!--{section:foot}-->
 </body>
 </html>
