--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -5,33 +5,34 @@
   <base href="/">
   <!--{section:head}-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/scotlandforeurope/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/scotlandforeurope/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/scotlandforeurope/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/scotlandforeurope/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/scotlandforeurope/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/scotlandforeurope/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/scotlandforeurope/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/scotlandforeurope/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/scotlandforeurope/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/scotlandforeurope/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/scotlandforeurope/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/scotlandforeurope/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/scotlandforeurope/favicon-16x16.png">
-  <link rel="manifest" href="/assets/icons/scotlandforeurope/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="https://storage.googleapis.com/scvo-assets/assets/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://storage.googleapis.com/scvo-assets/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://storage.googleapis.com/scvo-assets/assets/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://storage.googleapis.com/scvo-assets/assets/icons/favicon-16x16.png">
+  <link rel="manifest" href="https://storage.googleapis.com/scvo-assets/assets/icons/manifest.json">
   <meta name="msapplication-TileColor" content="#00838f">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/assets/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#00838f">
+  <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="https://storage.googleapis.com/scvo-assets/assets/opensearch.xml" />
   <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
   <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-  <link type="text/css" rel="stylesheet" href="/assets/css/scotlandforeurope-styles.css">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-31"></script>
+  <link type="text/css" rel="stylesheet" href="/assets/css/getinvolved-styles.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-4"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-3467930-31', { 'send_page_view': true, 'anonymize_ip': true });
+  gtag('config', 'UA-3467930-4', { 'send_page_view': true, 'anonymize_ip': true });
 
   {{#if request.params.query.debug ~}}
   console.log('#### DEBUG MODE ON ####');
@@ -50,9 +51,9 @@
           <div class="container-fluid">
             <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
               <span class="mdc-toolbar__title catalog-title">
-                <a href="/" class="brand-logo" title="Scotland for Europe">
-                  <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo.png" class="brand-logo-mobile" />
-                  <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo-desktop.png" class="brand-logo-desktop" />
+                <a href="/" class="brand-logo" title="Get Involved!">
+                  <img src="/assets/images/get-involved-logo.png" class="brand-logo-mobile" />
+                  <img src="/assets/images/get-involved-logo.png" class="brand-logo-desktop" />
                 </a>
               </span>
             </section>
@@ -74,7 +75,7 @@
         <nav class="mdc-temporary-drawer__drawer">
           <header class="mdc-temporary-drawer__header">
             <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
-              <img src="https://storage.googleapis.com/scotland-for-europe/sfe-logo.png" class="brand-logo-mobile" />
+              <img src="/assets/images/get-involved-logo.png" class="brand-logo-mobile" />
             </div>
           </header>
           <nav class="mdc-temporary-drawer__content mdc-list-group">
@@ -103,13 +104,9 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
                   <h3>About</h3>
                   <p>
-                    <strong>Scotland for Europe</strong> is run by the
-                    <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>
-                    with support from &hellip;
+                    <strong>Get Involved</strong> is run by the
+                    <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> and powered by a collaboration of infrastructure organisations across Scotland.
                   </p>
-                  <a href="https://" class="brand-logo" title="">
-                    <img src="https://storage.googleapis.com/" />
-                  </a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
                   <h3>Help</h3>
@@ -151,8 +148,18 @@
     </div>
   </scvo-site>
   <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-  <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-bg="#2C2C2B" data-fg="#FFFFFF" data-link="#FFFFFF" data-divlink="#FFFFFF" data-divlinkbg="#022347" data-moreinfo="/privacy-cookies-policy" data-cookie="CookieInfoScript" data-text-align="left"></script>
-  <script type="text/javascript" src="/assets/js/scotlandforeurope/root.js"></script>
-  <!--{section:foot}-->
+  <script type="text/javascript" id="cookieinfo"
+  src="/assets/js/cookieinfo.min.js"
+  data-bg="#138172"
+  data-fg="#FFFFFF"
+  data-link="#FFFFFF"
+  data-divlink="#FFFFFF"
+  data-divlinkbg="#138172"
+  data-moreinfo="/privacy-cookies-policy"
+  data-cookie="CookieInfoScript"
+  data-text-align="left">
+</script>
+<script type="text/javascript" src="/assets/js/getinvolved/root.js"></script>
+<!--{section:foot}-->
 </body>
 </html>
