--- a/db/configurations/getinvolved/layouts/default.hbs
+++ b/db/configurations/getinvolved/layouts/default.hbs
@@ -57,6 +57,10 @@
                 </a>
               </span>
             </section>
+          </div>
+        </div>
+        <div class="mdc-toolbar__row navbar">
+          <div class="container-fluid">
             <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
               <nav id="main-tab-bar" class="mdc-tab-bar" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.mdc-tab--label'" [menuactiveclass]="'active'">
                 {{#each context.menus.main}}
